# Vboarder

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENT_REPAIR_v1.1_SUMMARY.md  CLEANUP_FLAGS.md  CTO_SHIFT_HANDOFF.md  DEVELOPER_ONBOARDING.md  ELITE_SETUP_COMPLETE.md  ELITE_SUMMARY.md  FILE_MANIFEST.md  FORMATTING_QUICK_REF.md  FRONTEND_PORT_UPDATE.md  INSTALLATION_CHECKLIST.md  LFM2E_DEPLOYMENT_COMPLETE.md  MASTER_BRANCH_STATUS.md  Makefile  PERFECT_DEV_SETUP.md  PRODUCTION_READY.md  Patch-AgentDiscovery.ps1  QUICK_INSTALL.md  README.md  REASONING_IMPLEMENTATION.md  REASONING_QUICKSTART.md  RECENT_UPDATES.md  RELEASE_v1.0.0-Alpha.md  ROOT_CLEANUP_QUICK_REF.md  Road map.MD  STARTUP_GUIDE.md  START_HERE.md  TOOLS_SUMMARY.md  VBoard AI-Human Partnership.Md  WHATS_NEW.md  WSL_COMMANDS.md  agent_registry.json  agent_registry.json.pre_lfm2e  audit_agents.sh  check_integrity.ps1  check_integrity.sh  cleanup_system.sh  (+45 more)
.copilot/: config.json
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
Tests/: conftest.py  test_chat_endpoints.py  test_health.py
agents/: .env.template  .gitattributes  agent_path_logic_audit.py  agent_registry.json  config_upgrade_report.json  rag_memory.py  requirements.txt  verify_env.py  wsl_bootstrap.sh
api/: .env.example  bootstrap_local_env.bat  bootstrap_qdrant.ps1  bootstrap_qdrant.py  check_agent_setup.py  main.py  memory_manager.py  requirements.txt  shared_memory.py  simple_connector.py  verify_backend.ps1
coord/: agent_sync.py  ceo_sync.py  scheduler.py
core/: agent_base_logic.py  agent_path_logic_audit.py  rag_memory.py  verify_env.py
data/: memory.jsonl  shared_state.json
docs/: AGENTS_ENDPOINT.md  AGENT_ARCHITECTURE_DIAGRAM.md  AGENT_FUNCTIONS_REFERENCE.md  (+46 more)
(+824 files in other folders)
