[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vboarder"
version = "0.1.0"
description = "VBoarder AI multi-agent leadership system"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py311"

# Enable comprehensive checks
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort (import sorting)
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
  "E501",   # Line too long (handled by formatter)
  "B008",   # Function call in default argument
  "SIM108", # Use ternary operator (sometimes less readable)
]

# Allow unsafe fixes for auto-fixing
unsafe-fixes = true

# Allow tests and scripts more flexibility
per-file-ignores = { "tests/*" = ["D"], "scripts/*" = ["D", "E501"], "__init__.py" = ["F401"] }

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with 4 spaces
indent-style = "space"
# Respect magic trailing comma
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"
